--- a/index.pug
+++ b/index.pug
@@ -1,6 +1,6 @@
 html(lang="ru")
     head
+        link(rel="stylesheet" href="styles/styles.css")
         meta(charset="utf-8")
-        title= "Pug. Начало работы"
     body
-        h1 Hello, 111!
+        include includes/header.pug
