Added sign in and sign up buttons

--- a/includes/header.pug
+++ b/includes/header.pug
@@ -8,10 +8,13 @@ html(lang="ru")
                 img(src="images/logo.svg" alt="Logo" class="logo__image")
                 img(src="images/TOXIN.svg" alt="TOXIN" class="logo__company-name")
             div(class="nav-links")
-                a О нас
-                button
-                    p Услуги
-                a Вакансии
-                a Новости
-                button
-                    p Соглашения
+                a(href="#no_scroll") О нас
+                a(href="#no_scroll") Услуги
+                a(href="#no_scroll") Вакансии
+                a(href="#no_scroll") Новости
+                a(href="#no_scroll") Соглашения
+            div(class="sign-in-button")
+                a(href="sign_in.html") Войти
+            div(class="sign-up-button")
+                a(href="sign_up.html") Зарегистрироваться
+
