--- a/styles/constants.scss
+++ b/styles/constants.scss
@@ -4,4 +4,5 @@ $dark50: rgba(31, 32, 65, 0.5);
 $dark25: rgba(31, 32, 65, 0.25);
 $dark5: rgba(31, 32, 65, 0.05);
 $purple: #BC9CFF;
+$blue: #8ba4f9;
 $green: #6FCF97;
