Try to do smth with footer

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,7 +1,8 @@
 @import "header/header";
+@import "footer/footer";
+@import "landing-page/landing-page";
 
 body{
   font-family: Montserrat;
   margin: 0;
-  background-color: black;
 }
