--- a/index.pug
+++ b/index.pug
@@ -4,3 +4,6 @@ html(lang="ru")
         meta(charset="utf-8")
     body
         include includes/header.pug
+        main
+
+        include includes/footer.pug
