--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,9 +65,28 @@ nav {
   border: 0;
   background-color: white; }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%; }
+
+.footer__widgets {
+  background-color: orange;
+  width: 100%;
+  height: 372px; }
+
+.footer__copyright-bar {
+  background-color: white;
+  width: 100%;
+  height: 70px; }
+
+main {
+  background-image: url("../images/landing-page-bg.jpg");
+  width: 100%;
+  height: 100%; }
+
 body {
   font-family: Montserrat;
-  margin: 0;
-  background-color: black; }
+  margin: 0; }
 
 /*# sourceMappingURL=styles.css.map */
