--- a/src/pages/includes/header.pug
+++ b/src/pages/includes/header.pug
@@ -5,8 +5,8 @@ html(lang="ru")
     body
         nav
             div(class="logo")
-                img(src="images/logo.svg" alt="Logo" class="logo__image")
-                img(src="images/TOXIN.svg" alt="TOXIN" class="logo__company-name")
+                img(src=require("../../images/logo.svg") alt="Logo" class="logo__image")
+                img(src=require("../../images/TOXIN.svg") alt="TOXIN" class="logo__company-name")
             div(class="nav-links")
                 a(href="#no_scroll") О нас
                 a(href="#no_scroll") Услуги
